# maomaowm

./: .gitignore  LICENSE  README.md  client.h  config.conf  config.def.h  dispatch.h  flake.nix  main.c  maomao.c  maomao.desktop  meson.build  parse_config.h  preset_config.h  treefmt.nix
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: lock.yml  stale.yml
nix/: default.nix  hm-modules.nix  nixos-modules.nix
protocols/: dwl-ipc-unstable-v2.xml  meson.build
src/: dispatch.h  ime.h  maomao.c  mem.h  parse_config.h  preset_config.h  text_input.h
src/client/: client.h
src/common/: mem.c  mem.h  transaction.c  transaction.h  util.c  util.h
src/config/: parse_config.h  preset.h  preset_config.h
src/data/: static_keymap.h
src/dispatch/: dispatch.h
src/ext-protocol/: all.h  dwl-ipc.h  ext-workspace.h  foreign-toplevel.h
src/ext-workspace/: ext-workspace-internal.h  ext-workspace.c  ext-workspace.h  output.c  tag-worksapce.h  transaction-addon.c  transaction-addon.h
src/layout/: layout.h
src/text_input/: ime.h
